// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SeasonRaces/> highlight the row when driver is the champion 1`] = `
<DocumentFragment>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Race
          </th>
          <th>
            Driver
          </th>
          <th>
            Team
          </th>
          <th>
            Nationality
          </th>
          <th>
            Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Australian Grand Prix
          </td>
          <td>
            Giancarlo Fisichella
            <span
              class="star"
            >
              ✪
            </span>
          </td>
          <td>
            Renault
          </td>
          <td>
            Italian
          </td>
          <td>
            1:24:17.336
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`<SeasonRaces/> renders SeasonRaces correctly 1`] = `
<DocumentFragment>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Race
          </th>
          <th>
            Driver
          </th>
          <th>
            Team
          </th>
          <th>
            Nationality
          </th>
          <th>
            Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Australian Grand Prix
          </td>
          <td>
            Giancarlo Fisichella
          </td>
          <td>
            Renault
          </td>
          <td>
            Italian
          </td>
          <td>
            1:24:17.336
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
